--- a/login.html
+++ b/login.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Stack – Sign Up</title>
-<link rel="stylesheet" href="sign_up.css">
+<title>Stack – Login</title>
+<link rel="stylesheet" href="login.css">
 <link rel="icon" type="image/x-icon" href="stack_logo.png">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
@@ -24,9 +24,9 @@
 
   <div class="card" style="max-width: 400px; width: 100%;">
 
-    <h1 style="text-align:center;">sign_up()</h1>
+    <h1 style="text-align:center;">login()</h1>
     
-    <form class="sign-up-form">
+    <form class="login-form">
       
       <div class="username-input">
         <label for="username">username:</label>
